--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,12 @@ header div.container div {
     justify-content: left;   
 }
 header div.container div img {
-    height: 40px;
+    height: 70px;
+    
+    background-clip: padding-box;
+    background-color: white;
+    border-radius: 100%;
+    
 }
 
 header span{
