--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ html, body {
 
 body {
     background-image: linear-gradient(to right, rgba(230,60,112,0.3), rgba(103,85,130, 0.3), rgba(99,177,200, 0.3)), url(../img/woman1.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
 }
 
@@ -39,6 +40,17 @@ body {
 .container {
     width: 800px;
 }
+
+/* CENTRALIZADO */
+
+.centralizado,
+.centralizado .container{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+
 
 /* HEADER */
 
@@ -60,11 +72,12 @@ header div.container nav {
     justify-content: right;
 }
 header div.container nav a {
-    margin-left: 28px;
+    display: flex;
     text-decoration: none;
     text-transform: uppercase;
     color: white;
     font-size: 15px;
+    margin-right: 24px;
     
 }
 
@@ -78,12 +91,14 @@ header div.container div {
     justify-content: left;   
 }
 header div.container div img {
-    height: 70px;
+    height: 30px;
+    margin-right: 8px;
     
-    background-clip: padding-box;
-    background-color: white;
-    border-radius: 100%;
-    
+}
+
+header .container div .mulherada-logo {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 30px;
 }
 
 header span{
@@ -95,12 +110,12 @@ header span{
 
 main {
     /* background: url(img/main-background.jpg) no-repeat left top, linear-gradient(to right, rgba(230,60,112,0.3), rgba(103,85,130, 0.3), rgba(99,177,200, 0.3)); */
-    margin-top: 100px;
     position: center;
     align-items: flex-start;
     flex-direction: row;
     height: auto;
-    min-height: calc(100% - 122px);
+    min-height: calc(100% - 156px);
+    padding-top: 50px;
 }
 
 main img{
@@ -108,11 +123,11 @@ main img{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 20px;
+    
 
 }
 
-main div.container{
+main div.container {
     display: flex;
     justify-content: left;
 }
@@ -120,13 +135,9 @@ main div.container{
 /* BUSCA CONTAINER */
 
 .busca-container  {
-    background: linear-gradient(21deg,rgba(24, 23, 23, 0.15), rgba(103,85,130, 0.15));
-    align-items: center;
-    display: flex;
-    justify-content: center;
+    background: rgba(0, 0, 0, 0.2);
     height: 100px;
     width: 100%;
-    flex-direction: row;
 }
 .busca-container section {
     display: flex;
@@ -143,14 +154,20 @@ main div.container{
     padding: 3px;
     justify-content: space-between;
     flex-direction: row;
-    
+    text-align: center;
 }
 
-::placeholder{
+focus + span {
+    opacity: 1;
+    transform: scale(1);
+}
+
+::placeholder {
     color: white;
     font-size: 25px;
     font-family: 'Open Sans', sans-serif;
     padding: 3px;
+    text-align: center;
 }
 
 .botao-busca{
@@ -175,10 +192,6 @@ hover:button {
     color: white;
    
 }
-focus + span {
-    opacity: 1;
-    transform: scale(1);
-}
 
 .busca-container section input {
     background-color:rgba(0, 0, 0, 0);
@@ -186,29 +199,79 @@ focus + span {
     border: 1px solid white;
     border-radius: 8px;
     outline:none;
-    transition:height 1s;
     -webkit-transition:height 1s;
+    transition: 0.2s ease-in transform;
+    width: 300px;
+    margin-left: 0px;
+    margin-right: 24px;
 
 }
-/* TEXTO HOME */
-.texto-home .container{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    
-    
+
+.busca-container section input:focus {
+    transform: scale(1.05);
 }
-.texto-home p{
+
+/* TEXTO CONTAINER */
+
+.texto-container .container {
+    flex-direction: column;
+}
+
+.texto-container p {
+    color: white;
+    font-size: 23pt;
+    text-align: center;
+}
+
+/* CONTEUDO CONTAINER */
+
+.conteudo-container .container {    
+    background-color: rgba(255, 255, 255, 0.377);
+    border-radius: 8px;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 8px;
+    width: 600px;
+}
+
+main .empresa{
     align-items: center;
     display: flex;
     justify-content: center;
-    color: white;
-    font-size: 25px;
     flex-direction: column;
+    border-radius: 2px solid white;
+}
+.empresa a{
+    text-decoration:none;
+    background-color: rgba(255, 255, 255, 0.226);
+    border-radius: 5px;
+    color: white;
+    font-size: 20px;
+}
+.empresa img{
+    height: 30px;
+}
+/* DIVIDOR */
+
+main .curriculo{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 2px solid white;
     
 }
+.curriculo a{
+    text-decoration:none;
+    background-color: rgba(255, 255, 255, 0.226);
+    border-radius: 5px;
+    color: white;
+    font-size: 20px;
+}
+.curriculo img{
+    height: 30px;
+}
 
-/* DIVIDOR */
 .divisor-horizontal {
     background-image: linear-gradient(to right, #E63C70, #675582, #63B1C8);
     display: block;
@@ -217,20 +280,60 @@ focus + span {
 }
 
 /* FOOTER */
-footer{
-    /* background-image: linear-gradient(to right, rgba(230,60,112,0.5), rgba(103,85,130, 0.5), rgba(99,177,200, 0.5)); */
+
+footer {
     background-image: linear-gradient(to right, #E63C70, #675582, #63B1C8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 24px;
     height: 45px;
     color: white;
-}
-.rodape{
-    
+    flex-direction: row;
+    margin: 0%;
 }
 
+footer .container {
+    justify-content: space-around !important;
+}
+footer .container ul {
+    margin: 0;
+}
+footer .container ul li {
+    display: inline;
+    margin-left: 16px;
+}
+footer .container .img-footer {
+    display: flex;
+    flex-direction: row;
+}
+footer .container .img-footer img {
+    height: 30px;
+    margin-right: 16px;
+    width: 30px;
+}
+
+.email{
+    color: pink;
+    margin: 0%;
+    text-align: center;
+    text-decoration:none;
+
+}
+
+/* DIVISAO */
+
+.divisao {
+
+    background-color: rgba(255, 255, 255, 0.24);
+    height: calc(100% - 16px);
+    margin: 8px 0;
+    width: 1px;
+}
+
+.rodape{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+
+}
 
 
 
