--- a/css/stylesAvaliacao.css
+++ b/css/stylesAvaliacao.css
@@ -2,10 +2,18 @@ body{
     margin:0;
 }
 
+form{
+    width: 350px;
+    background-color: gainsboro;
+    display:flex;
+    justify-content: center;
+}
+
 .avaliacaoDaEmpresa{
     display: flex;
     flex-flow: column wrap;
-    border-radius: 8px;
+    width: 250px;
+    
 }
 
 .botao{
@@ -15,8 +23,30 @@ body{
 
 main{
     display: flex;
-    background-image: url ('img/10869.jpeg');
     background-position: center;
     background-size: cover;
+    justify-content: center;
+}
 
+h1{
+    font-weight: 900;
+    color: white;
+    justify-content: center;
+  
+}
+p{
+    font-weight: 900;
+    color: white;  
+    justify-content: center;
+  
+}
+
+.centralizarH1{
+    display: flex;
+    justify-content: center;
+}
+
+.centralizarP{
+    display:flex;
+    justify-content: center;
 }
