--- a/css/contato.css
+++ b/css/contato.css
@@ -1,15 +1,18 @@
 .faleConosco {
     align-items: center;
-    color:white;
     display: flex;
     flex-flow: column;    
+    background-color: gainsboro; 
+    width: 350px;
+    margin-left: 500px;
 }
-    
+
+
 textarea {
     border-radius: 8px;
-    height: 128px;
+    height: 150px;
     resize: none;
-    width: 244px;   
+    width: 300px;   
 }
     
 button {
@@ -22,7 +25,8 @@ button {
     
 input {
     border-radius:8px;
-    width: 246px;
+    width: 300px;
+    height: 20px;
 } 
     
 h1 {
