--- a/css/descricao-vaga.css
+++ b/css/descricao-vaga.css
@@ -8,7 +8,7 @@ main {
 
 /* LISTA CONTEUDO */
 
-.lista-conteudo.container {
+.detalhe-conteudo.container {
     align-items: flex-start;
     justify-content: left;
     padding: 16px 0;
@@ -16,99 +16,99 @@ main {
 
 /* PAINEL USUARIO */
 
-.painel-usuario {
+.painel-empresa {
     background-color: white;
-    width: 200px;
+    margin-left: 16px;
+    width: 300px;
 }
 
-.painel-usuario .foto-container {
+.painel-empresa .foto-container {
     display: flex;
     height: 90px;
     justify-content: center;
 }
 
-.painel-usuario .foto-container .cover {
-    background-image: linear-gradient(to right, rgba(230,60,112,0.3), rgba(103,85,130, 0.3), rgba(99,177,200, 0.3));
+.painel-empresa .foto-container .cover {
+    background-image: linear-gradient(to right, rgba(86,200,195,0.3), rgba(104,225,142, 0.3));
     position: absolute;
     height: 50px;
-    width: 200px;
+    width: 255px;
     z-index: 0;;
 }
 
-.painel-usuario .foto-container img {
+.painel-empresa .foto-container img {
     border: 2px solid white;
     margin-top: 16px;
-    border-radius: 50%; 
     max-height: 66px;
     max-width: 66px;
     z-index: 1;
 }
 
-.painel-usuario .nome,
-.painel-usuario .cargo {
+.painel-empresa .nome,
+.painel-empresa .cargo {
     display: block;
     text-align: center;
 }
 
-.painel-usuario .nome {
+.painel-empresa .nome {
     font-size: 16pt;
     font-weight: bold;
     text-transform: uppercase;
 }
 
-.painel-usuario .cargo {
+.painel-empresa .cargo {
     font-size: 10pt;
 }
 
-.painel-usuario .bio {
+.painel-empresa .bio {
     padding: 0 8px 8px 8px;
     font-size: 10pt;
 }
 
 /* LISTA RESULTADO */
 
-.lista-resultado {
+.detalhe-container {
     background-color: white;
-    margin-left: 16px;
     width: calc(100% - 200px);
     overflow-y: auto;
-}
-
-.lista-resultado .item {
     padding: 8px;
 }
 
 /* VAGA */
 
-.item.vaga {
-    margin-bottom: 16px;
+.detalhe-container .nome {
+    font-size: 24pt;
 }
 
-.item.vaga .nome {
-    font-size: 16pt;
-}
-
-.item.vaga article,
-.item.vaga span {
+.detalhe-container article,
+.detalhe-container span {
     display: block;
     font-size: 10pt;
 }
 
-.item.vaga .cidade {
+.detalhe-container .cidade {
 
     float: right;
 }
 
-.item.vaga .salario {    
+.detalhe-container .salario {    
     font-weight: bold;
 }
 
-.item.vaga .descricao {
+.detalhe-container .descricao {
     margin-top: 8px;
+    white-space: pre-wrap;
     text-overflow: ellipsis;
+    width: 100%;
+    overflow-x: hidden;
 }
 
-.item.vaga .aplicar {
-    margin-top: 8px;
+.detalhe-container .aplicar {
+    float: right;
     color: #E63C70;
+}
+
+.detalhe-container .salario,
+.detalhe-container .aplicar {
+    font-size: 18pt;
 }
