--- a/css/usuario.css
+++ b/css/usuario.css
@@ -1,7 +1,7 @@
 /* MAIN */
 
 main {
-    background-color: #F5F5F5;    
+    background-color: rgba(245, 245, 245, 1);
     min-height: calc(100% - 106px);
     padding-top: 0;
 }
@@ -24,6 +24,7 @@ main {
     font-size: 10pt;
 }
 
+.form-usuario a.button,
 .form-usuario input {
     display: block;
     font-size: 10pt;
@@ -32,8 +33,9 @@ main {
     margin-bottom: 8px;
 }
 
-.form-usuario input[type=submit] {
+.form-usuario a.button {
     display: inline-block;
+    margin-left: 0;
     width: auto;
 }
 
